--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Samiullah</title>
+    <title>Dede Herman Suryana</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -27,11 +27,10 @@
         <div class="text-content">
             <h1>I'm Hanan Zubair</h1>
             <div class="text-animation">
-                <h2>Frontend Developer</h2>
+                <h2>Data Scientist | Lecturer and Researcher</h2>
             </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, illum! Libero cupiditate sunt officiis
-        laudantium inventore vero, praesentium iure accusantium asperiores nobis architecto qui maiores, debitis
-        at, eaque vel! Officiis, vel reprehenderit dicta cumque doloremque qui. Autem aperiam cumque aliquid.</p>
+    <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
+I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p>
             <div class="btn-section">
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
@@ -49,12 +48,9 @@
         <h2 class="title">About <span>Me</span></h2>
         <img src="MdSay.png" alt="" class="aboutImg">
         <div class="text-content2">
-            <h2>Frontend Developer</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste asperiores molestiae nemo ipsam porro nam
-    nesciunt repudiandae voluptates blanditiis soluta eum, tempora explicabo optio corrupti ullam quidem
-    magnam quaerat qui dolorem architecto in dignissimos! Nostrum fugit, modi sed fugiat possimus maxime
-    voluptates ea molestiae animi, nesciunt inventore libero hic. Consectetur praesentium facere aut
-    perspiciatis voluptate. Nam sunt perspiciatis quasi rem.</p>
+            <h2>Data Scientist | Lecturer and Researcher</h2>
+    <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
+I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p>
             <button class="btn">Read More</button>
         </div>
     </section>
