--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- *************************Navbar************************* -->
     <header class="header">
-        <a href="#" class="logo">Muhammad</a>
+        <a href="#" class="logo">Dede Herman Suryana</a>
         <i class='bx bx-menu' id="menu" style='color:#ffffff'></i>
         <nav class="navbar">
             <a href="#home" style="--vlr:1" class="active">Home</a>
@@ -25,7 +25,7 @@
     <!-- *************************Home Section************************* -->
     <section class="home"  id="home">
         <div class="text-content">
-            <h1>I'm Hanan Zubair</h1>
+            <h1>I'm Dede Herman Suryana</h1>
             <div class="text-animation">
                 <h2>Data Scientist | Lecturer and Researcher</h2>
             </div>
