--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
         </div>
-        <img src="MdSay.png" alt="">
+        <img src="Pas_Foto.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
