--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="MdSay.png" alt="" class="aboutImg">
+        <img src="Pas_Foto.jpg" alt="" class="aboutImg">
         <div class="text-content2">
             <h2>Data Scientist</h2>
     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
