--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="text-content">
             <h1>I'm Dede Herman Suryana</h1>
             <div class="text-animation">
-                <h2>Data Scientist</h2>
+                <h2>Data Scientist and Lecturer</h2>
             </div>
     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
 I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p>
@@ -48,7 +48,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <h2 class="title">About <span>Me</span></h2>
         <img src="Pas_Foto.jpg" alt="" class="aboutImg">
         <div class="text-content2">
-            <h2>Data Scientist</h2>
+            <h2>Data Scientis and Lecturer</h2>
     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
 I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p>
             <button class="btn">Read More</button>
