--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="--vlr:7"></i>
-        <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="--vlr:9"></i>
+        <a href="https://github.com/hippokidz" target="_blank"><i class='bx bxl-github' style="--vlr:7"></i></a>
+        <a href="https://www.linkedin.com/in/hrmnsryn/" target="_blank"><i class='bx bxl-linkedin' style="--vlr:8"></i></a>
+        <a href="https://www.instagram.com/hrmn.sryn/" target="_blank"><i class='bx bxl-instagram' style="--vlr:9"></i></a>
             </div>
         </div>
         <img src="Pas_Foto.jpg" alt="">
