--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Dede Herman Suryana</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 
 <body>
@@ -32,8 +34,9 @@
 <!--     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
 I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p> -->
             <div class="btn-section">
-                <button class="btn">Hire me</button>
-                <button class="btn">Let's Talk</button>
+                <!-- <button class="btn">Hire me</button> -->
+                <a href="#contact" class="btn">Contact Me</a>
+                <!-- <button class="btn">Contact Me</button> -->
             </div>
             <div class="social-media">
         <a href="https://github.com/hippokidz" target="_blank"><i class='bx bxl-github' style="--vlr:7"></i></a>
@@ -41,7 +44,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <a href="https://www.instagram.com/hrmn.sryn/" target="_blank"><i class='bx bxl-instagram' style="--vlr:9"></i></a>
             </div>
         </div>
-        <img src="Pas_Foto.jpg" alt="">
+        <img src="foto.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
@@ -61,59 +64,43 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
             <div class="column">
                 <h2>Education</h2>
                 <div class="box">
-                    <div class="education-content">
-                        <div class="content">
-    <div class="year">2021-22<i class='bx bxs-calendar'></i></div>
-    <h3>Degree College</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-        deserunt libero quisquam ab eius minus odio quod dicta!</p>
+                <div class="education-content">
+                    <div class="content">
+                        <div class="year">
+                            2017-2021 <i class='bx bxs-calendar'></i>
+                        </div>
+                        <h2>Universitas Gunadarma</h2>
+                        <h3><i class="uil uil-graduation-cap"></i> Bachelor of Informatic Engineering</h3>
+                        <div class="location">
+                            <i class="uil uil-map-marker-alt qualification_icon"></i>
+                            <span>Depok Jawa Barat</span>
                         </div>
                     </div>
-                    <div class="education-content">
-                        <div class="content">
-        <div class="year">2021-22 <i class='bx bxs-calendar'></i></div>
-                            <h3>Degree College</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-        deserunt libero quisquam ab eius minus odio quod dicta!</p>
+
+                    <div class="content">
+                        <div class="year">
+                            2022-2023 <i class='bx bxs-calendar'></i>
+                        </div>
+                        <h2>Universitas Gunadarma</h2>
+                        <h3><i class="uil uil-graduation-cap"></i> Master of Electrical Engineering</h3>
+                        <div class="location">
+                            <i class="uil uil-map-marker-alt qualification_icon"></i>
+                            <span>Depok Jawa Barat</span>
                         </div>
                     </div>
-                    <div class="education-content">
-    <div class="content">
-        <div class="year">2021-22 <i class='bx bxs-calendar'></i></div>
-        <h3>Degree College</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-            deserunt libero quisquam ab eius minus odio quod dicta!</p>
-    </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <h2>Education</h2>
-                <div class="box">
-                    <div class="education-content">
-    <div class="content">
-        <div class="year">2021-22<i class='bx bxs-calendar'></i></div>
-        <h3>Degree College</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-            deserunt libero quisquam ab eius minus odio quod dicta!</p>
-    </div>
-</div>
-                    <div class="education-content">
-    <div class="content">
-        <div class="year">2021-22 <i class='bx bxs-calendar'></i></div>
-    <h3>Degree College</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-        deserunt libero quisquam ab eius minus odio quod dicta!</p>
+
+                    <div class="content">
+                        <div class="year">
+                            2023-Now <i class='bx bxs-calendar'></i>
+                        </div>
+                        <h2>Universitas Gunadarma</h2>
+                        <h3><i class="uil uil-graduation-cap"></i> Doctor of Information Technology</h3>
+                        <div class="location">
+                            <i class="uil uil-map-marker-alt qualification_icon"></i>
+                            <span>Depok Jawa Barat</span>
                         </div>
                     </div>
-                    <div class="education-content">
-                        <div class="content">
-                <div class="year">2021-22 <i class='bx bxs-calendar'></i></div>
-                            <h3>Degree College</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur enim,
-            deserunt libero quisquam ab eius minus odio quod dicta!</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -123,7 +110,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <h2 class="title">My <span>Skills</span></h2>
         <div class="wrapper">
             <div class="skill-content">
-                <h3 class="skill-title">Language</h3>
+                <h3 class="skill-title"><i class="uil uil-brackets-curly"></i> Developing</h3>
                 <div class="skill-box skill-box1">
                     <div class="single-skill">
                         <span class="topic">HTML</span>
@@ -146,27 +133,48 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
                     <div class="bar-side">
                         <div class="bar bar-3"></div>
                     </div>
+                    <div class="single-skill">
+                        <span class="topic">Python</span>
+                        <span class="topic">90%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-4"></div>
+                    </div>
+                    <div class="single-skill">
+                        <span class="topic">Machine Learning</span>
+                        <span class="topic">90%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-5"></div>
+                    </div>
+                    <div class="single-skill">
+                        <span class="topic">Deep Learning</span>
+                        <span class="topic">90%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-6"></div>
+                    </div>
                 </div>
             </div>
             <div class="skill-content">
-                <h3 class="skill-title">Language</h3>
+                <h3 class="skill-title"><i class="fas fa-database"></i> Database</h3>
                 <div class="skill-box skill-box2">
                     <div class="single-skill">
-                        <span class="topic">HTML</span>
+                        <span class="topic">MySQL</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-1"></div>
                     </div>
                     <div class="single-skill">
-                        <span class="topic">CSS</span>
+                        <span class="topic">Microsoft Access</span>
                         <span class="topic">80%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-2"></div>
                     </div>
                 <div class="single-skill">
-                    <span class="topic">JavaScript</span>
+                    <span class="topic">Oracle SQL</span>
                     <span class="topic">70%</span>
                 </div>
                     <div class="bar-side">
@@ -177,25 +185,43 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         </div>
     </section>
     <!-- *************************Contact Section************************* -->
-    <section class="contact" id="contact">
-        <h2 class="title">Contact<span>Me</span></h2>
-        <form action="#" id="">
-            <div class="input-box">
-    <input type="text" required placeholder="Full Name">
-    <input type="email" required placeholder="Email">
-            </div>
-            <div class="input-box">
-    <input type="tel" required placeholder="Mobile Number">
-    <input type="email" required placeholder="Subject For">
-            </div>
-    <textarea name="" id="" cols="30" rows="10" placeholder="Message" required></textarea>
-    <input type="submit" value="Send Message" class="btn">
-        </form>
+<section class="contact" id="contact">
+    <h2 class="title">Contact <span>Me</span></h2>
+    <form id="contact-form">
+        <div class="input-box">
+            <input type="text" name="name" id="name" required placeholder="Full Name">
+            <input type="email" name="email" id="email" required placeholder="Email">
+        </div>
+        <div class="input-box">
+            <input type="tel" name="phone" id="phone" required placeholder="Mobile Number">
+            <input type="text" name="subject" id="subject" required placeholder="Subject For">
+        </div>
+        <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
+        <input type="submit" value="Send Message" class="btn">
+    </form>
+</section>
 
-    </section>
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>
+    (function(){
+        emailjs.init("dudung25"); // Ganti dengan User ID dari EmailJS
+    })();
+
+    document.getElementById("contact-form").addEventListener("submit", function(event) {
+        event.preventDefault();
+
+        emailjs.sendForm("dudung25", "your_template_id", this)
+            .then(function() {
+                alert("Message sent successfully!");
+            }, function(error) {
+                alert("Failed to send message: " + JSON.stringify(error));
+            });
+    });
+</script>
+
     <footer>
         <div class="text">
-            <p>Copyright @ 2024 by Muhammad Samiullah</p>
+            <p>Copyright @ 2025 by Dede Herman Suryana</p>
         </div>
        <a href="#"> <i class='bx bx-up-arrow-alt'></i></a>
     </footer>
