--- a/index.html
+++ b/index.html
@@ -201,23 +201,30 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
     </form>
 </section>
 
+<!-- EmailJS Library -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 <script>
     (function(){
-        emailjs.init("dudung25"); // Ganti dengan User ID dari EmailJS
+        emailjs.init("Vg4ZFKPYb2BF9vnEo"); // Public Key
     })();
 
     document.getElementById("contact-form").addEventListener("submit", function(event) {
-        event.preventDefault();
+        event.preventDefault(); // Mencegah reload halaman
 
-        emailjs.sendForm("dudung25", "your_template_id", this)
-            .then(function() {
-                alert("Message sent successfully!");
+        // Kirim email menggunakan EmailJS
+        emailjs.sendForm("dudung25", "template1", this)
+            .then(function(response) {
+                alert("✅ Message sent successfully!");
+                console.log("SUCCESS!", response.status, response.text);
+                document.getElementById("contact-form").reset(); // Reset form setelah berhasil
             }, function(error) {
-                alert("Failed to send message: " + JSON.stringify(error));
+                alert("❌ Failed to send message. Please try again.");
+                console.error("FAILED...", error);
             });
     });
 </script>
+
 
     <footer>
         <div class="text">
