--- a/index.html
+++ b/index.html
@@ -120,39 +120,46 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
                         <div class="bar bar-1"></div>
                     </div>
                     <div class="single-skill">
+                        <span class="topic">PHP</span>
+                        <span class="topic">90%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-2"></div>
+                    </div>
+                    <div class="single-skill">
                         <span class="topic">CSS</span>
                         <span class="topic">80%</span>
                     </div>
                     <div class="bar-side">
-                        <div class="bar bar-2"></div>
+                        <div class="bar bar-3"></div>
                     </div>
                     <div class="single-skill">
                         <span class="topic">JavaScript</span>
                         <span class="topic">70%</span>
                     </div>
                     <div class="bar-side">
-                        <div class="bar bar-3"></div>
+                        <div class="bar bar-4"></div>
                     </div>
                     <div class="single-skill">
                         <span class="topic">Python</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
-                        <div class="bar bar-4"></div>
+                        <div class="bar bar-5"></div>
                     </div>
                     <div class="single-skill">
                         <span class="topic">Machine Learning</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
-                        <div class="bar bar-5"></div>
+                        <div class="bar bar-6"></div>
                     </div>
                     <div class="single-skill">
                         <span class="topic">Deep Learning</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
-                        <div class="bar bar-6"></div>
+                        <div class="bar bar-7"></div>
                     </div>
                 </div>
             </div>
