--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         </div>
         <div class="input-box">
             <input type="tel" name="phone" id="phone" required placeholder="Mobile Number">
-            <input type="text" name="subject" id="subject" required placeholder="Subject For">
+            <input type="text" name="subject" id="subject" required placeholder="Subject">
         </div>
         <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
         <input type="submit" value="Send Message" class="btn">
