--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
     <h2 class="title">Contact <span>Me</span></h2>
     <form id="contact-form">
         <div class="input-box">
-            <input type="text" name="name" id="name" required placeholder="Full Name">
-            <input type="email" name="email" id="email" required placeholder="Email">
+            <input type="text" name="from_name" id="name" required placeholder="Full Name">
+            <input type="email" name="reply_to" id="email" required placeholder="Email">
         </div>
         <div class="input-box">
             <input type="tel" name="phone" id="phone" required placeholder="Mobile Number">
@@ -213,20 +213,27 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
 
 <script>
     (function(){
-        emailjs.init("Vg4ZFKPYb2BF9vnEo"); // Public Key
+        emailjs.init("Vg4ZFKPYb2BF9vnEo"); // Public Key Anda
     })();
 
     document.getElementById("contact-form").addEventListener("submit", function(event) {
         event.preventDefault(); // Mencegah reload halaman
 
-        // Kirim email menggunakan EmailJS
-        emailjs.sendForm("dudung25", "template1", this)
+        const formData = {
+            from_name: document.getElementById("name").value,
+            reply_to: document.getElementById("email").value,
+            phone: document.getElementById("phone").value,
+            subject: document.getElementById("subject").value,
+            message: document.getElementById("message").value
+        };
+
+        emailjs.send("dudung25", "template1", formData)
             .then(function(response) {
                 alert("✅ Message sent successfully!");
                 console.log("SUCCESS!", response.status, response.text);
                 document.getElementById("contact-form").reset(); // Reset form setelah berhasil
             }, function(error) {
-                alert("❌ Failed to send message. Please try again.");
+                alert("❌ Failed to send message. Please check your EmailJS settings.");
                 console.error("FAILED...", error);
             });
     });
