--- a/index.html
+++ b/index.html
@@ -213,18 +213,19 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
 
 <script>
     (function(){
-        emailjs.init("Vg4ZFKPYb2BF9vnEo"); // Public Key Anda
+        emailjs.init("Vg4ZFKPYb2BF9vnEo"); // Ganti dengan Public Key Anda
     })();
 
     document.getElementById("contact-form").addEventListener("submit", function(event) {
         event.preventDefault(); // Mencegah reload halaman
 
         const formData = {
-            from_name: document.getElementById("name").value,
-            reply_to: document.getElementById("email").value,
-            phone: document.getElementById("phone").value,
-            subject: document.getElementById("subject").value,
-            message: document.getElementById("message").value
+            to_name: "Dede Herman Suryana", // Nama admin (harus sesuai dengan EmailJS template)
+            from_name: document.getElementById("name").value, // Nama pengirim
+            reply_to: document.getElementById("email").value, // Email pengirim
+            phone: document.getElementById("phone").value, // Nomor telepon pengirim
+            subject: document.getElementById("subject").value, // Subjek pesan
+            message: document.getElementById("message").value // Isi pesan
         };
 
         emailjs.send("dudung25", "template1", formData)
