--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="text-animation">
                 <h2>Data Scientist and Lecturer</h2>
             </div>
-<!--     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
-I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p> -->
+<!--     <p>I am a graduate of S1 Informatics Engineering with a GPA of 3.50 and S2 Electrical Engineering with a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
+I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p> -->
             <div class="btn-section">
                 <!-- <button class="btn">Hire me</button> -->
                 <a href="#contact" class="btn">Contact Me</a>
