--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="text-animation">
                 <h2>Data Scientist and Lecturer</h2>
             </div>
-<!--     <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
-I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p> -->
+<!--     <p>I am a graduate of S1 Informatics Engineering with a GPA of 3.50 and S2 Electrical Engineering with a GPA of 3.81 from Gunadarma University. Currently, I am studying S3 Information Technology. This strong educational background gave me a deep technical understanding.
+I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p> -->
             <div class="btn-section">
                 <!-- <button class="btn">Hire me</button> -->
                 <a href="#contact" class="btn">Contact Me</a>
@@ -42,6 +42,7 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <a href="https://github.com/hippokidz" target="_blank"><i class='bx bxl-github' style="--vlr:7"></i></a>
         <a href="https://www.linkedin.com/in/hrmnsryn/" target="_blank"><i class='bx bxl-linkedin' style="--vlr:8"></i></a>
         <a href="https://www.instagram.com/hrmn.sryn/" target="_blank"><i class='bx bxl-instagram' style="--vlr:9"></i></a>
+        <a href="https://scholar.google.com/citations?user=BMBcVTsAAAAJ&hl=id&oi=ao" target="_blank"><i class="fa-solid fa-graduation-cap"></i></a>
             </div>
         </div>
         <img src="foto.jpg" alt="">
@@ -52,9 +53,8 @@ I have interests and talents in design,programming, AI, Machine Learning, DeepLe
         <img src="Pas_Foto.jpg" alt="" class="aboutImg">
         <div class="text-content2">
             <h2>Data Scientis and Lecturer</h2>
-    <p>I am a graduate of S1 Informatics Engineeringwith a GPA of 3.50 and S2 Electrical Engineeringwith a GPA of 3.81 from Gunadarma University.Currently, I am studying S3 InformaticsEngineering. This strong educationalbackground gave me a deep technicalunderstanding.
-I have interests and talents in design,programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing,Classification, Natural Language Processing(NLP).</p>
-            <button class="btn">Read More</button>
+    <p>I am a graduate of S1 Informatics Engineering with a GPA of 3.50 and S2 Electrical Engineering with a GPA of 3.81 from Gunadarma University. Currently, I am studying S3 Information Technology. This strong educational background gave me a deep technical understanding. I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p>
+            <!-- <button class="btn">Read More</button> -->
         </div>
     </section>
     <!-- *************************Education Section************************* -->
