--- a/index.html
+++ b/index.html
@@ -245,9 +245,17 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
         <div class="text">
             <p>Copyright @ 2025 by Dede Herman Suryana</p>
         </div>
-       <a href="#"> <i class='bx bx-up-arrow-alt'></i></a>
+        <a href="#" onclick="scrollToTop(); return false;"> 
+            <i class='bx bx-up-arrow-alt'></i>
+        </a>
     </footer>
+    <script>
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        }
+    </script>
     <script src="script.js"></script>
+
 </body>
 
 </html>
