--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- *************************Navbar************************* -->
     <header class="header">
-        <a href="#" class="logo">Dede Herman Suryana</a>
+        <a href="#home" class="logo">Dede Herman Suryana</a>
         <i class='bx bx-menu' id="menu" style='color:#ffffff'></i>
         <nav class="navbar">
             <a href="#home" style="--vlr:1" class="active">Home</a>
