--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- *************************Navbar************************* -->
     <header class="header">
-        <a href="#home" class="logo">Dede Herman Suryana</a>
+        <a href="#home" class="logo">Dede Herman Suryana</a>    
         <i class='bx bx-menu' id="menu" style='color:#ffffff'></i>
         <nav class="navbar">
             <a href="#home" style="--vlr:1" class="active">Home</a>
@@ -194,6 +194,7 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
     <!-- *************************Contact Section************************* -->
 <section class="contact" id="contact">
     <h2 class="title">Contact <span>Me</span></h2>
+    <p class="contact-subtitle">Write your message to me</p>
     <form id="contact-form">
         <div class="input-box">
             <input type="text" name="from_name" id="name" required placeholder="Full Name">
