--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p> -->
             <div class="btn-section">
                 <!-- <button class="btn">Hire me</button> -->
-                <a href="#contact" class="btn">Contact Me</a>
-                <!-- <button class="btn">Contact Me</button> -->
+                <button class="btn" onclick="window.location.href='#contact'">Contact Me</button>
+                <!-- <button class="btn" id="#contact"> Contact Me</button> -->
             </div>
             <div class="social-media">
         <a href="https://github.com/hippokidz" target="_blank"><i class='bx bxl-github' style="--vlr:7"></i></a>
