--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
         <h2 class="title">About <span>Me</span></h2>
         <img src="Pas_Foto.jpg" alt="" class="aboutImg">
         <div class="text-content2">
-            <h2>Data Scientis and Lecturer</h2>
+            <h2>Dede Herman Suryana</h2>
     <p>I am a graduate of S1 Informatics Engineering with a GPA of 3.50 and S2 Electrical Engineering with a GPA of 3.81 from Gunadarma University. Currently, I am studying S3 Information Technology. This strong educational background gave me a deep technical understanding. I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p>
             <!-- <button class="btn">Read More</button> -->
         </div>
@@ -244,7 +244,7 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
 
     <footer>
         <div class="text">
-            <p>Copyright @ 2025 by Dede Herman Suryana</p>
+            <p>Copyright © 2025 HippoKidz. All rights reserved.</p>
         </div>
         <a href="#" onclick="scrollToTop(); return false;"> 
             <i class='bx bx-up-arrow-alt'></i>
