--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
 I have interests and talents in Design, Programming, AI, Machine Learning, DeepLearning, Image Processing, Video Processing, Classification, Natural Language Processing(NLP).</p> -->
             <div class="btn-section">
                 <!-- <button class="btn">Hire me</button> -->
-                <button class="btn" onclick="window.location.href='#contact'">Contact Me</button>
+                <button class="btn" onclick="scrollToContact()">Contact Me</button>
+
+                <script>
+                  function scrollToContact() {
+                    document.getElementById("contact").scrollIntoView({ behavior: "smooth" });
+                  }
+                </script>
                 <!-- <button class="btn" id="#contact"> Contact Me</button> -->
             </div>
             <div class="social-media">
