--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
                     <div class="bar-side">
                         <div class="bar bar-1"></div>
                     </div>
+
                     <div class="single-skill">
                         <span class="topic">PHP</span>
                         <span class="topic">90%</span>
@@ -132,6 +133,7 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
                     <div class="bar-side">
                         <div class="bar bar-2"></div>
                     </div>
+
                     <div class="single-skill">
                         <span class="topic">CSS</span>
                         <span class="topic">80%</span>
@@ -139,33 +141,52 @@ I have interests and talents in Design, Programming, AI, Machine Learning, DeepL
                     <div class="bar-side">
                         <div class="bar bar-3"></div>
                     </div>
+
                     <div class="single-skill">
                         <span class="topic">JavaScript</span>
-                        <span class="topic">70%</span>
+                        <span class="topic">80%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-4"></div>
                     </div>
+
                     <div class="single-skill">
-                        <span class="topic">Python</span>
+                        <span class="topic">Java</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-5"></div>
                     </div>
                     <div class="single-skill">
-                        <span class="topic">Machine Learning</span>
+                        <span class="topic">Android</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-6"></div>
                     </div>
+
                     <div class="single-skill">
-                        <span class="topic">Deep Learning</span>
-                        <span class="topic">90%</span>
+                        <span class="topic">Python</span>
+                        <span class="topic">95%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-7"></div>
+                    </div>
+
+                    <div class="single-skill">
+                        <span class="topic">Machine Learning</span>
+                        <span class="topic">95%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-8"></div>
+                    </div>
+
+                    <div class="single-skill">
+                        <span class="topic">Deep Learning</span>
+                        <span class="topic">95%</span>
+                    </div>
+                    <div class="bar-side">
+                        <div class="bar bar-9"></div>
                     </div>
                 </div>
             </div>
